--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -11,7 +11,7 @@
     font-size: 1.4rem;
     height: 7rem;
     background-color: white;
-    border-bottom: 1px solid var(--color-grey-light-2);
+    border-bottom: var(--line);
 
     display: flex;
     justify-content: space-between;
@@ -34,7 +34,26 @@
 
 .hotel-view {
     background-color: white;
-    min-height: 100vh;
 
+    flex: 1;
+}
+
+.detail {
+    display: flex;
+    padding: 4.5rem;
+    background-color: var(--color-grey-light-1);
+    border-bottom: var(--line);
+}
+
+.description {
+    flex: 0 0 60%;
+    margin-right: 4.5rem;
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    font-size: 1.4rem;
+}
+
+.user-reviews {
     flex: 1;
 }
