--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -39,6 +39,8 @@
 }
 
 .detail {
+    font-size: 1.4rem;
+
     display: flex;
     padding: 4.5rem;
     background-color: var(--color-grey-light-1);
@@ -51,9 +53,12 @@
     background-color: #fff;
     box-shadow: var(--shadow-light);
     padding: 3rem;
-    font-size: 1.4rem;
 }
 
 .user-reviews {
     flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
