--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -118,54 +118,53 @@
 /////////////////////
 // SIDE NAVIGATION
 .side-nav {
-    font-size: 1.4rem;
-    list-style: none;
-    margin-top: 3.5rem;
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3.5rem;
 
   &__item {
     position: relative;
 
     &:not(:last-child) {
-        margin-bottom: .5rem;
+      margin-bottom: 0.5rem;
     }
   }
 
   &__item:before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 3px;
-      background-color: var(--color-primary);
-      transform: scaleY(0);
-      transition: transform .2s, 
-                  width .4s cubic-bezier(1,0,0,1) .2s,
-                  background-color .1s;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 3px;
+    background-color: var(--color-primary);
+    transform: scaleY(0);
+    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
+      background-color 0.1s;
   }
 
   &__item:hover::before,
   &__item--active::before {
-      transform: scaleY(1);
-      width: 100%;
+    transform: scaleY(1);
+    width: 100%;
   }
 
   &__item:active::before {
-      background-color: var(--color-primary-light);
+    background-color: var(--color-primary-light);
   }
 
   &__link:link,
   &__link:visited {
-      color: var(--color-grey-light-1);
-      text-decoration: none;
-      text-transform: uppercase;
-      display: block;
-      padding: 1.5rem 3rem;
-      position: relative;
-      z-index: 10;
+    color: var(--color-grey-light-1);
+    text-decoration: none;
+    text-transform: uppercase;
+    display: block;
+    padding: 1.5rem 3rem;
+    position: relative;
+    z-index: 10;
 
-      display: flex;
-      align-items: center;
+    display: flex;
+    align-items: center;
   }
 
   &__icon {
@@ -231,7 +230,7 @@
   }
 
   &__icon-location {
-    margin-right: .5rem;
+    margin-right: 0.5rem;
   }
 
   &__rating {
@@ -245,19 +244,18 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    
-      &-average {
-        font-size: 2.25rem;
-        font-weight: 300;
-        margin-bottom: -3px;
-      }
-      
-      &-count {
-        font-size: .8rem;
-        text-transform: uppercase;
-      }
-  }
 
+    &-average {
+      font-size: 2.25rem;
+      font-weight: 300;
+      margin-bottom: -3px;
+    }
+
+    &-count {
+      font-size: 0.8rem;
+      text-transform: uppercase;
+    }
+  }
 }
 
 /////////////////////
@@ -271,11 +269,11 @@
   display: inline-block;
   background-color: transparent;
   cursor: pointer;
-  transition: all .2s;
+  transition: all 0.2s;
 
   & span {
     margin-left: 3px;
-    transition: margin-left .2s;
+    transition: margin-left 0.2s;
   }
 
   &:focus {
@@ -300,7 +298,7 @@
 
   50% {
     transform: scale(1.05);
-    box-shadow: 0 1rem 4rem rgba(0,0,0,.25);
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
   }
 
   100% {
@@ -315,7 +313,6 @@
   margin-bottom: 2rem;
 }
 
-
 /////////////////////
 // LIST
 .list {
@@ -329,15 +326,15 @@
 
   &__item {
     flex: 0 0 50%;
-    margin-bottom: .7rem;
+    margin-bottom: 0.7rem;
   }
 
   &__item::before {
-    content: '';
+    content: "";
     display: inline-block;
     height: 1rem;
     width: 1rem;
-    margin-right: .7rem;
+    margin-right: 0.7rem;
 
     //older browsers
     // background-image: url(../img/chevron-thin-right.svg);
@@ -366,7 +363,6 @@
   }
 
   &__friends {
-
   }
 
   &__photo {
@@ -380,9 +376,9 @@
       margin-right: -1.15rem;
     }
   }
- }
+}
 
- /////////////////////
+/////////////////////
 // REVIEWS
 .review {
   background-color: #fff;
@@ -418,7 +414,7 @@
     font-weight: 600;
     font-size: 1.1rem;
     text-transform: uppercase;
-    margin-bottom: .4rem;
+    margin-bottom: 0.4rem;
   }
 
   &__user-date {
@@ -443,5 +439,74 @@
     color: var(--color-grey-light-2);
     font-family: sans-serif;
     z-index: 1;
+  }
+}
+
+/////////////////////
+// CTA
+.cta {
+  padding: 3.5rem;
+  text-align: center;
+
+  &__book-now {
+    font-size: 2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin-bottom: 2.5rem;
+  }
+}
+
+.btn {
+  font-size: 1.5rem;
+  font-weight: 300;
+  border-radius: 100px;
+  border: none;
+  background-image: linear-gradient(
+    to right,
+    var(--color-primary-light),
+    var(--color-primary-dark)
+  );
+  color: white;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+
+  & > * {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    transition: all 0.3s;
+  }
+
+  &__visible {
+    padding: 2rem 7.5rem;
+  }
+
+  &__invisible {
+    position: absolute;
+    left: 0;
+    top: -100%;
+    padding: 2rem 0;
+  }
+
+  &:hover {
+    background-image: linear-gradient(
+    to left,
+    var(--color-primary-light),
+    var(--color-primary-dark)
+  );
+  }
+
+  &:hover &__visible {
+    transform: translateY(100%);
+  }
+
+  &:hover &__invisible {
+    top: 0;
+  }
+
+  &:focus {
+    outline: none;
+    animation: pulsate 1s infinite;
   }
 }
