--- a/sass/main.css
+++ b/sass/main.css
@@ -296,7 +296,7 @@ body {
 }
 
 .side-nav__item:not(:last-child) {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .side-nav__item:before {
@@ -410,7 +410,7 @@ body {
 }
 
 .overview__icon-location {
-  margin-right: .5rem;
+  margin-right: 0.5rem;
 }
 
 .overview__rating {
@@ -442,7 +442,7 @@ body {
 }
 
 .overview__rating-count {
-  font-size: .8rem;
+  font-size: 0.8rem;
   text-transform: uppercase;
 }
 
@@ -455,14 +455,14 @@ body {
   display: inline-block;
   background-color: transparent;
   cursor: pointer;
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 .btn-inline span {
   margin-left: 3px;
-  -webkit-transition: margin-left .2s;
-  transition: margin-left .2s;
+  -webkit-transition: margin-left 0.2s;
+  transition: margin-left 0.2s;
 }
 
 .btn-inline:focus {
@@ -542,15 +542,15 @@ body {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 50%;
           flex: 0 0 50%;
-  margin-bottom: .7rem;
+  margin-bottom: 0.7rem;
 }
 
 .list__item::before {
-  content: '';
+  content: "";
   display: inline-block;
   height: 1rem;
   width: 1rem;
-  margin-right: .7rem;
+  margin-right: 0.7rem;
   background-color: var(--color-primary);
   -webkit-mask-image: url(../img/chevron-thin-right.svg);
   -webkit-mask-size: cover;
@@ -626,7 +626,7 @@ body {
   font-weight: 600;
   font-size: 1.1rem;
   text-transform: uppercase;
-  margin-bottom: .4rem;
+  margin-bottom: 0.4rem;
 }
 
 .review__user-date {
@@ -651,5 +651,69 @@ body {
   color: var(--color-grey-light-2);
   font-family: sans-serif;
   z-index: 1;
+}
+
+.cta {
+  padding: 3.5rem;
+  text-align: center;
+}
+
+.cta__book-now {
+  font-size: 2rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  margin-bottom: 2.5rem;
+}
+
+.btn {
+  font-size: 1.5rem;
+  font-weight: 300;
+  border-radius: 100px;
+  border: none;
+  background-image: -webkit-gradient(linear, left top, right top, from(var(--color-primary-light)), to(var(--color-primary-dark)));
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+  color: white;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.btn > * {
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.btn__visible {
+  padding: 2rem 7.5rem;
+}
+
+.btn__invisible {
+  position: absolute;
+  left: 0;
+  top: -100%;
+  padding: 2rem 0;
+}
+
+.btn:hover {
+  background-image: -webkit-gradient(linear, right top, left top, from(var(--color-primary-light)), to(var(--color-primary-dark)));
+  background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+}
+
+.btn:hover .btn__visible {
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+}
+
+.btn:hover .btn__invisible {
+  top: 0;
+}
+
+.btn:focus {
+  outline: none;
+  -webkit-animation: pulsate 1s infinite;
+          animation: pulsate 1s infinite;
 }
 /*# sourceMappingURL=main.css.map */
